k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: go-web-app
  name: go-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: go-web-app
    spec:
      containers:
      - image: kodal035/go-web-app:v1
        name: go-web-app
        ports:
        - containerPort: 8080
        resources: {}
status: {}
